# nrf-theseus

./: .gitignore  CMakeLists.txt  README.md  west.yml
boards/: CMakeLists.txt
boards/nrf54l15/: board.h
boards/nrf9151/: board.h
cmake/libc/: picolibc.cmake
cmake/targets/: nrf54l15.cmake  nrf9151.cmake
cmake/toolchain/: arm-none-eabi.cmake
dummy/nimble/app/: pkg.yml
dummy/nimble/targets/nrf54/: pkg.yml
include/: FreeRTOSConfig.h  log.h  nrfx_config.h  nrfx_glue.h  nrfx_log.h  portmacro.h  rng.h
include/theseus/: gpiote.h  log.h  modem.h  module.h  rng.h
lib/: CMakeLists.txt  log.c  module.c  nrfx_glue.c  port.c  port2.c  rng.c
lib/bluetooth/: CMakeLists.txt  hci.c
lib/modules/: CMakeLists.txt
lib/modules/bluetooth/: CMakeLists.txt  hci.c
lib/modules/gpiote/: CMakeLists.txt  nrf54l15.c  nrf9151.c
lib/modules/log/: CMakeLists.txt  log.c
lib/modules/modem/: glue.c
lib/modules/nrf_modem_lib/: CMakeLists.txt  glue.c  modem.c
lib/modules/rng/: CMakeLists.txt  rng.c
lib/modules/spu/: CMakeLists.txt  spu.c
lib/modules/tinycrypt/: CMakeLists.txt  tinycrypt.c
lib/ports/: CMakeLists.txt  nrf54l15.c  nrf9151.c
lib/secure/: CMakeLists.txt  main_s.c
samples/: CMakeLists.txt
samples/blinky/: CMakeLists.txt  main.c
samples/bluetooth/: main.c
samples/bluetooth/ble_adv/: CMakeLists.txt  main.c
samples/bluetooth/ble_adv_bm/: CMakeLists.txt  main.c
samples/bluetooth/ble_adv_rtos/: CMakeLists.txt  main.c
samples/bluetooth/ble_hrs/: CMakeLists.txt  main.c
samples/bluetooth/ble_pair/: main.c
samples/bluetooth/ble_peripheral/: CMakeLists.txt  main.c
samples/bluetooth/ble_scan/: CMakeLists.txt  main.c
samples/hello_theseus/: CMakeLists.txt  main.c
samples/hello_world/: CMakeLists.txt  main.c
samples/modem/: CMakeLists.txt  main.c
samples/toggle_led/: main.c
scripts/: nrf52840_xxaa.ld  west-commands.yml
scripts/linker/: nrf9151.ld
scripts/linker/secure_app/: nrf9151_ns.ld  nrf9151_s.ld
scripts/west_commands/: build.py  flash.py  sysconfig_nimble.py
sysconfig/nimble/app/: pkg.yml  syscfg.yml
sysconfig/nimble/targets/nrf54/: pkg.yml  syscfg.yml
